# campus-intrusion-dectector

./: .pypirc  README.md  pyproject.toml
res/: db_cred.json
src/: main.py  setup.py
src/bootstrapper/: Bootstrapper.py
src/campus_intrusion_detection.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/features/matching/: FaceMatching.py
src/features/notification/: Notifier.py
src/features/recognition/: FaceDetection.py  FaceUtils.py
src/features/streaming/: CameraStream.py
src/models/: model.py  staff.py  visitor.py
src/persistence/: _mongo.py  crud.py  data_source.py  mongo.py
src/utillities/: constants.py  utils.py
